--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootswatch": "^5.3.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^10.3.0",
+    "ngx-spinner": "^14.0.0",
     "ngx-toastr": "^15.2.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
